feat: 增加注册和权限的过滤
