# openapi.yaml
@@ -537,6 +537,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.GetMeReply'
+    /v1/user/register:
+        post:
+            tags:
+                - User
+            description: 用户注册
+            operationId: User_Register
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/user.v1.RegisterRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/user.v1.RegisterReply'
     /v1/user/{id}:
         get:
             tags:
@@ -1232,6 +1251,33 @@ components:
                 password:
                     type: string
             description: 登录请求
+        user.v1.RegisterReply:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                message:
+                    type: string
+                userInfo:
+                    $ref: '#/components/schemas/user.v1.UserInfo'
+            description: 用户注册响应
+        user.v1.RegisterRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                email:
+                    type: string
+                phone:
+                    type: string
+                password:
+                    type: string
+                age:
+                    type: integer
+                    format: int32
+                avatar:
+                    type: string
+            description: 用户注册请求
         user.v1.UpdateUserReply:
             type: object
             properties:
